package NAlice;

option go_package = "a.yandex-team.ru/alice/megamind/protos/common";
option java_package = "ru.yandex.alice.megamind.protos.common";
option java_outer_classname = "LocationProto";

import "mapreduce/yt/interface/protos/extension.proto";

message TLocation {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    optional double Lat = 1 [json_name = "lat", (NYT.column_name) = "lat"];
    optional double Lon = 2 [json_name = "lon", (NYT.column_name) = "lon"];
    optional double Accuracy = 3 [json_name = "accuracy", (NYT.column_name) = "accuracy"]; // В метрах
    optional double Recency = 4 [json_name = "recency", (NYT.column_name) = "recency"]; // В миллисекундах
    optional double Speed = 5 [json_name = "speed", (NYT.column_name) = "speed"]; // В метрах в секунду
}

// Automotive locations. Deprecated
message TFavouriteLocation {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    optional double Lat = 1 [json_name = "lat", (NYT.column_name) = "lat"];
    optional double Lon = 2 [json_name = "lon", (NYT.column_name) = "lon"];

    optional string Title = 3 [json_name = "title", (NYT.column_name) = "title"];
    optional string SubTitle = 4 [json_name = "subtitle", (NYT.column_name) = "subtitle"];
}
